<resources>
    <string name="app_name">Dementia Helper</string>
    <string name="home">Home</string>
    <string name="patient">Patient</string>
    <string name="carer">Carer</string>
    <string name="profile">Profile</string>
    <string name="no_internet_error">No news articles. There was some error, please check your internet connection.</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="have_account_sign_in_here">Have account? Sign in here.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="empty_fields">Please check input fields!</string>
    <string name="passwords_dont_match">Passwords don\'t match.</string>
    <string name="there_was_error">Something is wrong, check inputs/internet connection.</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="patient_info"><u>Patient Info</u></string>
    <string name="name">Name:</string>
    <string name="log_out">Log Out</string>
    <string name="surname">Surname:</string>
    <string name="address">Address:</string>
    <string name="age">Age:</string>
    <string name="carer_info">Carer Info</string>
    <string name="carer_contact_phone">Contact Phone:</string>
    <string name="carer_contact_email">Contact Email:</string>
    <string name="user">User:</string>
    <string name="add_info">Add Patient and Carer Info</string>
    <string name="add_chage_carer_password">Add/Change Carer Password</string>
    <string name="change_user_password">Change User Password</string>
    <string name="reset_link_was_sent">Email with reset password link was sent!</string>
    <string name="reset_link_was_not_sent">There was an error with requesting change of password, check your internet connection</string>
    <string name="save_info">Save Profile Info</string>
    <string name="cancel">Cancel</string>
    <string name="todos">TODOs</string>
    <string name="notes">Notes</string>
    <string name="reminder">Reminder</string>
    <string name="emergency_call">Emergency call</string>
    <string name="daily_news">Daily News</string>
    <string name="memory_lane">Memory Lane</string>
    <string name="daily_motivation">Daily Motivation</string>
    <string name="save_note">Save note</string>
    <string name="add_note">Add note</string>
    <string name="city">"City: "</string>
    <string name="add_task">Add task</string>
    <string name="save_task">Save task</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="select_reminder_date">(Select reminder date)</string>
    <string name="select_reminder_time">(Select reminder time)</string>
    <string name="note">Note:</string>
    <string name="select_reminder_note">(Write note for a reminder)</string>
    <string name="please_enter_carer_password">Please enter carer password:</string>
    <string name="confirm">Confirm</string>
    <string name="carer_password">Carer Password</string>
    <string name="confirm_carer_password">Confirm Carer Password</string>
    <string name="change_carer_password">Change Carer Password</string>
    <string name="save_reminder">Save Reminder</string>
    <string name="save_reminder_and_set_alarm">Save reminder and set alarm</string>
    <string name="notification_channel">Dementia App Notification Channel</string>
    <string name="notifications">Notifications</string>
    <string name="memory_game">Memory game</string>
    <string name="reaction_game">Reaction game</string>
    <string name="tap_number">Tap number:</string>
    <string name="average_time">Average time:</string>
    <string name="score">"Score: "</string>
    <string name="all_time_average">"All time average reaction time: "</string>
    <string name="all_time_average_score">"All time average score: "</string>
</resources>
