<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:layout_marginTop="100dp"
    android:layout_marginBottom="100dp">
    <TextView
        android:id="@+id/tvTitleRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:textSize="28sp"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/etCarerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/carer_password"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/etCarerConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_carer_password"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/register"/>
    <Space android:layout_width="match_parent" android:layout_height="50dp"/>
    <TextView
        android:id="@+id/linkLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_account_sign_in_here"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"/>
</LinearLayout>