<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tvDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:text="@string/date"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@android:color/black"/>
    <EditText
        android:id="@+id/etReminderDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvDateLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/select_reminder_date"
        android:textAlignment="center"
        android:focusable="false"/>
    <TextView
        android:id="@+id/tvTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etReminderDate"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:text="@string/time"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@android:color/black"/>
    <EditText
        android:id="@+id/etReminderTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etReminderDate"
        app:layout_constraintStart_toEndOf="@id/tvTimeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/select_reminder_time"
        android:textAlignment="center"
        android:focusable="false"/>
    <TextView
        android:id="@+id/tvNoteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etReminderTime"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:text="@string/note"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@android:color/black"/>
    <EditText
        android:id="@+id/etReminderNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etReminderTime"
        app:layout_constraintStart_toEndOf="@id/tvNoteLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/select_reminder_note"
        android:textAlignment="center"
        android:inputType="text"/>
    <Button
        android:id="@+id/buttonSaveReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/buttonCancel"
        app:layout_constraintTop_toBottomOf="@id/etReminderNote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/save_reminder_and_set_alarm"/>
    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buttonSaveReminder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/cancel"/>
</androidx.constraintlayout.widget.ConstraintLayout>